# evals_examples

./: LICENSE  README.md  main.py  mise.toml  pyproject.toml
evals_examples/: ragas_aspect_critic.py  ragas_summarization.py
