[project]
name = "evals-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "ollama>=0.5.1",
    "ragas>=0.2.15",
    "sacrebleu>=2.5.1",
]
