[project]
name = "evals-examples"
version = "0.1.0"
description = "A small playground for experimenting with LLM evaluation libraries"
authors = [
    {name = "David Sanchez"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-ollama (>=0.3.3,<0.4.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "ragas (>=0.2.15,<0.3.0)",
    "sacrebleu (>=2.5.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
